<?xml version="1.0"?>
<package format="2">
  <name>zlac8015d_canopen_noetic</name>
  <version>0.1.0</version>
  <description>ROS Noetic SocketCAN driver node for ZLAC8015D CANopen velocity control.</description>

  <maintainer email="user@example.com">tammy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>
